--- a/app/Resources/views/default/index.html.twig
+++ b/app/Resources/views/default/index.html.twig
@@ -1,4 +1,27 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+    {{ include('_partials/_newDinoForm.html.twig') }}
+
+    <h3>Enclosures</h3>
+
+    <table class="table-enclosures">
+        <tbody>
+            {% for enclosure in enclosures %}
+                <tr id="enclosure-{{ enclosure.id }}">
+                    <td>Enclosure #{{ enclosure.id }}</td>
+                    <td>
+                        Contains <strong>{{ enclosure.dinosaurCount }}</strong> dinosaur(s)
+                    </td>
+                    <td>
+                        {% if enclosure.isSecurityActive %}
+                            🔒 Security active!
+                        {% else %}
+                            <button class="button button-alarm">Sound alarm !!!</button>
+                        {% endif %}
+                    </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
 {% endblock %}
